[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version="0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
